--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-dash==2.0.0
-dash-bootstrap-components==1.0.0
-dash-core-components==2.0.0
-dash-daq==0.5.0
-dash-html-components==2.0.0
+dash==2.7.0
+dash-bootstrap-components
+dash-core-components
+dash-daq
+dash-html-components
 numpy==1.21.4
 pandas==1.3.4
-plotly==5.4.0
+plotly
 scikit-learn==1.0.1
-Werkzeug==2.0.0
